-- ============================================================
-- Create ChatGPT Enrichments Table
-- Migration script: 13_create_chatgpt_enrichments_table.sql
-- Creates staging.chatgpt_enrichments table for storing ChatGPT enrichment data
-- ============================================================

-- Create staging.chatgpt_enrichments table
CREATE TABLE IF NOT EXISTS staging.chatgpt_enrichments (
    chatgpt_enrichment_key BIGSERIAL PRIMARY KEY,
    jsearch_job_postings_key BIGINT NOT NULL,
    job_summary TEXT,
    chatgpt_extracted_skills JSONB,
    chatgpt_extracted_location VARCHAR(255),
    chatgpt_seniority_level VARCHAR(50),
    chatgpt_remote_work_type VARCHAR(50),
    chatgpt_job_min_salary NUMERIC,
    chatgpt_job_max_salary NUMERIC,
    chatgpt_salary_period VARCHAR(50),
    chatgpt_salary_currency VARCHAR(10),
    chatgpt_enriched_at TIMESTAMP,
    chatgpt_enrichment_status JSONB,
    dwh_load_date DATE DEFAULT CURRENT_DATE,
    dwh_load_timestamp TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_chatgpt_enrichments_job_postings 
        FOREIGN KEY (jsearch_job_postings_key) 
        REFERENCES staging.jsearch_job_postings(jsearch_job_postings_key),
    CONSTRAINT uq_chatgpt_enrichments_job_postings_key 
        UNIQUE (jsearch_job_postings_key)
);

-- Add indexes for performance
CREATE INDEX IF NOT EXISTS idx_chatgpt_enrichments_job_postings_key 
    ON staging.chatgpt_enrichments(jsearch_job_postings_key);
CREATE INDEX IF NOT EXISTS idx_chatgpt_enrichments_enriched_at 
    ON staging.chatgpt_enrichments(chatgpt_enriched_at);

-- Add comments to document the table and columns
COMMENT ON TABLE staging.chatgpt_enrichments IS 'Stores ChatGPT-based enrichment data for job postings. Separate table allows independent schema evolution and priority logic in fact_jobs via COALESCE.';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_enrichment_key IS 'Primary key (auto-increment)';
COMMENT ON COLUMN staging.chatgpt_enrichments.jsearch_job_postings_key IS 'Foreign key to staging.jsearch_job_postings (UNIQUE - one enrichment per job)';
COMMENT ON COLUMN staging.chatgpt_enrichments.job_summary IS '2 sentence summary of the job posting, generated by ChatGPT';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_extracted_skills IS 'Skills extracted by ChatGPT (JSONB array of skill strings)';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_extracted_location IS 'Normalized location extracted by ChatGPT';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_seniority_level IS 'Seniority level extracted by ChatGPT (must match rule-based enum: intern, junior, mid, senior, executive - lowercase)';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_remote_work_type IS 'Remote work type extracted by ChatGPT (must match rule-based enum: hybrid, remote, onsite - lowercase)';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_job_min_salary IS 'Minimum salary value extracted by ChatGPT';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_job_max_salary IS 'Maximum salary value extracted by ChatGPT';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_salary_period IS 'Salary period extracted by ChatGPT (must match rule-based enum: year, month, week, day, hour - lowercase)';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_salary_currency IS 'Currency code extracted by ChatGPT (must match rule-based enum: USD, CAD, EUR, GBP - uppercase)';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_enriched_at IS 'Timestamp when ChatGPT enrichment was completed';
COMMENT ON COLUMN staging.chatgpt_enrichments.chatgpt_enrichment_status IS 'JSONB tracking which fields were successfully extracted: {"summary": boolean, "skills": boolean, "location": boolean, "seniority": boolean, "remote_type": boolean, "salary": boolean}';
COMMENT ON COLUMN staging.chatgpt_enrichments.dwh_load_date IS 'Technical column: date when record was loaded';
COMMENT ON COLUMN staging.chatgpt_enrichments.dwh_load_timestamp IS 'Technical column: timestamp when record was loaded';

