// Job Postings ETL Pipeline - Data Flow Diagram
// Documentation: https://docs.dbdiagram.io/
//
// To view the interactive diagram:
// 1. Open https://dbdiagram.io/
// 2. Copy the contents of this file
// 3. Paste into the dbdiagram.io editor
//

// ============================================================
// BRONZE LAYER (Raw) - Step 1 & 3
// Raw, unnormalized data directly from external APIs
// ============================================================

Table raw.jsearch_job_postings {
  jsearch_job_postings_key bigint [pk]
  raw_payload jsonb [note: 'Complete JSON response from JSearch API']
  dwh_load_date date
  dwh_load_timestamp timestamp
  dwh_source_system varchar [note: 'jsearch']
  campaign_id integer [note: 'FK to marts.job_campaigns']
  
  Note: 'Raw job postings from JSearch API. Populated by Source-extractor service (Step 1).'
}

Table raw.glassdoor_companies {
  glassdoor_companies_key bigint [pk]
  raw_payload jsonb [note: 'Complete JSON response from Glassdoor API']
  company_lookup_key varchar [note: 'Normalized company name for lookup']
  dwh_load_date date
  dwh_load_timestamp timestamp
  dwh_source_system varchar [note: 'glassdoor']
  
  Note: 'Raw company data from Glassdoor API. Populated by Source-extractor service (Step 3).'
}

// ============================================================
// SILVER LAYER (Staging) - Step 2 & 4
// Normalized, cleaned, and deduplicated data
// ============================================================

Table staging.jsearch_job_postings {
  jsearch_job_postings_key bigint [pk]
  campaign_id integer
  jsearch_job_id varchar [note: 'Natural key from JSearch API']
  job_title varchar
  job_description text
  employer_name varchar [note: 'Used for company matching']
  job_city varchar
  job_state varchar
  job_country varchar
  job_location varchar
  job_latitude numeric
  job_longitude numeric
  job_employment_type varchar
  job_employment_types jsonb
  employment_types varchar
  job_is_remote boolean
  job_posted_at varchar
  job_posted_at_timestamp bigint
  job_posted_at_datetime_utc varchar
  job_min_salary numeric
  job_max_salary numeric
  job_salary_period varchar
  job_apply_link varchar
  job_google_link varchar
  job_apply_is_direct boolean
  apply_options jsonb
  job_publisher varchar
  job_benefits varchar
  job_highlights jsonb
  job_onet_soc varchar
  job_onet_job_zone varchar
  employer_logo varchar
  employer_website varchar
  extracted_skills jsonb [note: 'Array of extracted technical skills from descriptions/titles']
  seniority_level varchar [note: 'Detected seniority level: intern, junior, mid, senior, executive']
  remote_work_type varchar [note: 'Detected work type: remote, hybrid, onsite']
  enrichment_status jsonb [note: 'JSON flags tracking enrichment processing state: {\"skills_enriched\": bool, \"seniority_enriched\": bool, \"remote_type_enriched\": bool}']
  dwh_load_date date
  dwh_load_timestamp timestamp
  dwh_source_system varchar
  
  Note: 'Normalized job postings. Built from raw.jsearch_job_postings (Step 2). Deduplicated on jsearch_job_id. Enrichment fields (skills, seniority, remote type) are populated by Enricher service and tracked via enrichment_status JSON.'
}

Table staging.glassdoor_companies {
  glassdoor_companies_key bigint [pk]
  company_lookup_key varchar
  glassdoor_company_id integer [note: 'Natural key from Glassdoor API']
  company_name varchar
  website varchar
  industry varchar
  company_description text
  company_size varchar
  company_size_category varchar
  company_type varchar
  revenue varchar
  year_founded integer
  stock varchar
  headquarters_location varchar
  rating numeric
  review_count integer
  salary_count integer
  job_count integer
  business_outlook_rating numeric
  career_opportunities_rating numeric
  compensation_and_benefits_rating numeric
  culture_and_values_rating numeric
  diversity_and_inclusion_rating numeric
  recommend_to_friend_rating numeric
  ceo_rating numeric
  senior_management_rating numeric
  work_life_balance_rating numeric
  ceo varchar
  company_link varchar
  logo varchar
  reviews_link varchar
  jobs_link varchar
  faq_link varchar
  competitors jsonb
  office_locations jsonb
  best_places_to_work_awards jsonb
  dwh_load_date date
  dwh_load_timestamp timestamp
  dwh_source_system varchar
  
  Note: 'Normalized company data. Built from raw.glassdoor_companies (Step 4). Deduplicated on glassdoor_company_id.'
}

Table staging.company_enrichment_queue {
  company_lookup_key varchar [pk, note: 'Normalized company name']
  enrichment_status varchar [note: 'pending, success, not_found, error']
  first_queued_at timestamp
  last_attempt_at timestamp
  completed_at timestamp
  error_message text
  attempt_count integer
  
  Note: 'Tracks company enrichment status. Used by Company Extractor (Step 3) with fuzzy matching to select correct company from API results.'
}

Table staging.chatgpt_enrichments {
  jsearch_job_postings_key bigint [pk, note: 'FK to staging.jsearch_job_postings']
  job_summary text [note: '2-sentence summary extracted by ChatGPT']
  chatgpt_extracted_skills jsonb [note: 'Skills array extracted by ChatGPT']
  chatgpt_extracted_location varchar [note: 'Normalized location string']
  chatgpt_seniority_level varchar [note: 'Seniority level: intern, junior, mid, senior, executive']
  chatgpt_remote_work_type varchar [note: 'Remote work type: remote, hybrid, onsite']
  chatgpt_job_min_salary numeric [note: 'Minimum salary extracted by ChatGPT']
  chatgpt_job_max_salary numeric [note: 'Maximum salary extracted by ChatGPT']
  chatgpt_salary_period varchar [note: 'Salary period: year, month, week, day, hour']
  chatgpt_salary_currency varchar [note: 'Salary currency: USD, CAD, EUR, GBP']
  chatgpt_enriched_at timestamp [note: 'Timestamp of enrichment']
  chatgpt_enrichment_status jsonb [note: 'Status tracking for extracted fields']
  
  Note: 'ChatGPT enrichment data. Populated by ChatGPT Enrichment Service (Step 5.5). Contains AI-extracted job summary, skills, location, seniority, remote work type, and salary information. Separate table to avoid modifying staging.jsearch_job_postings structure.'
}

// ============================================================
// GOLD LAYER (Marts) - Step 6
// Curated, transformed, and modeled data for consumption
// ============================================================

Table marts.job_campaigns {
  campaign_id integer [pk]
  campaign_name varchar
  is_active boolean [note: 'Only active campaigns trigger extraction']
  query varchar [note: 'Job search query']
  location varchar
  country varchar
  date_window varchar
  email varchar
  skills varchar
  min_salary numeric
  max_salary numeric
  currency varchar [note: 'Currency code for salary preferences (e.g., USD, CAD, EUR)']
  remote_preference varchar [note: 'Comma-separated: remote, hybrid, onsite']
  seniority varchar [note: 'Comma-separated: entry, mid, senior, lead']
  company_size_preference varchar [note: 'Comma-separated company size ranges']
  employment_type_preference varchar [note: 'Comma-separated: FULLTIME, PARTTIME, CONTRACTOR, etc.']
  ranking_weights jsonb [note: 'Custom ranking weights as percentages. Format: {"location_match": 15.0, "salary_match": 15.0, "company_size_match": 10.0, "skills_match": 15.0, "keyword_match": 15.0, "employment_type_match": 5.0, "seniority_match": 10.0, "remote_type_match": 10.0, "recency": 5.0}. Must sum to 100% if provided. Falls back to ranking_config.json if NULL.']
  created_at timestamp
  updated_at timestamp
  total_run_count integer
  last_run_at timestamp
  last_run_status varchar
  last_run_job_count integer
  
  Note: 'Job search campaigns. Managed exclusively via Campaign Management UI. Used by Step 1 (extraction) and Step 7 (ranking). Supports multiple preferences (comma-separated) for remote_preference, seniority, company_size_preference, and employment_type_preference. Custom ranking weights can be set per campaign via UI, with validation ensuring they sum to 100%.'
}

Table marts.fact_jobs {
  jsearch_job_id varchar [pk, note: 'Natural key from JSearch API']
  company_key varchar [note: 'FK to dim_companies - ONLY company reference']
  job_title varchar
  job_location varchar
  job_employment_type varchar
  apply_options jsonb
  job_is_remote boolean
  job_posted_at_datetime_utc varchar
  dwh_load_date date
  dwh_load_timestamp timestamp
  dwh_source_system varchar
  
  Note: 'Fact table for jobs. Contains only company_key (no company attributes). Built from staging.jsearch_job_postings (Step 6). Uses fuzzy matching to join to dim_companies.'
}

Table marts.dim_companies {
  company_key varchar [pk, note: 'Surrogate key (MD5 hash)']
  glassdoor_company_id integer [note: 'Natural key from Glassdoor']
  normalized_company_name varchar [note: 'Used for fuzzy matching']
  company_name varchar
  company_size varchar
  year_founded integer
  rating numeric
  job_count integer
  career_opportunities_rating numeric
  compensation_and_benefits_rating numeric
  culture_and_values_rating numeric
  work_life_balance_rating numeric
  company_link varchar
  dwh_load_date date
  dwh_load_timestamp timestamp
  dwh_source_system varchar
  
  Note: 'Company dimension. Contains all company attributes. Built from staging.glassdoor_companies (Step 6).'
}

Table marts.dim_ranking {
  jsearch_job_id varchar [pk, note: 'FK to fact_jobs']
  campaign_id integer [pk, note: 'FK to job_campaigns']
  rank_score numeric [note: '0-100 ranking score']
  rank_explain jsonb [note: 'Scoring breakdown']
  ranked_at timestamp
  ranked_date date
  dwh_load_timestamp timestamp
  dwh_source_system varchar
  
  Note: 'Job rankings per campaign. Structure created by dbt (Step 6), data populated by Ranker service (Step 7).'
}

// ============================================================
// RELATIONSHIPS
// ============================================================

// Bronze to Silver (Normalization)
Ref: raw.jsearch_job_postings.jsearch_job_postings_key > staging.jsearch_job_postings.jsearch_job_postings_key 
Ref: raw.glassdoor_companies.glassdoor_companies_key > staging.glassdoor_companies.glassdoor_companies_key 

// Silver to Gold (Modelling)
Ref: staging.jsearch_job_postings.jsearch_job_id > marts.fact_jobs.jsearch_job_id
Ref: staging.glassdoor_companies.glassdoor_company_id > marts.dim_companies.glassdoor_company_id

// ChatGPT Enrichment Relationship
Ref: staging.chatgpt_enrichments.jsearch_job_postings_key > staging.jsearch_job_postings.jsearch_job_postings_key 

// Gold Layer Relationships
Ref: marts.dim_ranking.jsearch_job_id > marts.fact_jobs.jsearch_job_id
Ref: marts.dim_companies.company_key > marts.fact_jobs.company_key 
Ref: marts.job_campaigns.campaign_id > marts.dim_ranking.campaign_id 
Ref: marts.job_campaigns.campaign_id > raw.jsearch_job_postings.campaign_id 

// Enrichment Queue (used for fuzzy matching)
Ref: staging.company_enrichment_queue.company_lookup_key - staging.glassdoor_companies.company_lookup_key

// ============================================================
// TABLE GROUPS (for visual organization in dbdiagram.io)
// ============================================================

TableGroup "Bronze Layer (Raw)" {
  raw.jsearch_job_postings
  raw.glassdoor_companies
}

TableGroup "Silver Layer (Staging)" {
  staging.jsearch_job_postings
  staging.glassdoor_companies
  staging.company_enrichment_queue
  staging.chatgpt_enrichments
}

TableGroup "Gold Layer (Marts)" {
  marts.job_campaigns
  marts.fact_jobs
  marts.dim_companies
  marts.dim_ranking
}
